# sl-explore

./: .dockerignore  .gitignore  Dockerfile  README.md  data.py  database.py  fly.toml  main.py  models.py  pyproject.toml  seed.py  seed_more.py  setup.sh
static/css/: style.css
templates/: add_attraction.html  admin.html  attraction_detail.html  base.html  edit_attraction.html  index.html  login.html  register.html
