[project]
name = "travel-web"
version = "0.1.0"
description = "Sri Lanka Tourist Attractions Web App"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.2",
]
